--- a/public/index.html
+++ b/public/index.html
@@ -43,6 +43,9 @@
 <body>
     <h1>Relatorio do Crawler</h1>
 
+    <button id="botaoAcessar" onclick="mostrarDados()">mostra dados dos sites</button>
+    <button id="botaoFechar" onclick="fecharDados()">Fechar</button>
+
     <div id="conteudo"></div>
 
     <script src="script.js"></script>
