--- a/public/index.html
+++ b/public/index.html
@@ -1,20 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Relatorio do Crawler</title>
     <style>
         body {
+            background-color: #121212;
+            color: #f0f0f0;
             font-family: Arial, sans-serif;
-            padding: 2rem;
-            background-color: #f5f5f5;
+            padding: 20px;
         }
 
         h1 {
             color: #333;
             text-align: center;
         }
+
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-top: 20px;
+            background-color: #1e1e1e;
+        }
+
+        th,
+        td {
+            border: 1px solid #333;
+            padding: 10px;
+            text-align: left;
+        }
+
+        th {
+            background-color: #0b0c10;
+            color: #66fcf1;
+        }
+
+        a {
+            color: #45aaf2;
+            text-decoration: none;
+        }
+
+        a:hover {
+            text-decoration: underline;
+        }
+
+        .site-titulo {
+      margin-top: 40px;
+      font-size: 1.2em;
+      color: #f0f0f0;
+      border-bottom: 1px solid #333;
+      padding-bottom: 5px;
+    }
 
         .site {
             margin-bottom: 2rem;
@@ -23,31 +61,37 @@
             border-radius: 10px;
             box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
         }
+
         .site h2 {
             margin: 0 0 0.5rem;
             color: #333;
         }
+
         .link {
             margin: 0.3rem 0;
             font-size: 0.95rem;
         }
+
         a {
             text-decoration: none;
             color: #0077cc;
         }
+
         a:hover {
             text-decoration: underline;
         }
     </style>
 </head>
+
 <body>
     <h1>Relatorio do Crawler</h1>
 
-    <button id="botaoAcessar" onclick="mostrarDados()">mostra dados dos sites</button>
-    <button id="botaoFechar" onclick="fecharDados()">Fechar</button>
-
+    <button onclick="acessarDados()">📂 Ver Dados</button>
+    <button onclick="fecharDados()">❌ Fechar</button>
+    
     <div id="conteudo"></div>
 
     <script src="script.js"></script>
 </body>
+
 </html>
