--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Crawler de Sites</title>
   <link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
   <header>
     <h1>Crawler de Sites</h1>
@@ -17,19 +19,27 @@
       <form id="siteForm">
         <input type="url" id="novaUrl" placeholder="Digite a URL..." required />
         <div class="buttons">
-          <button type="submit" onclick="enviarUrl()">Adicionar</button>
-          <button type="button" onclick="acessarDados()">📂 Ver Dados</button>
+          <button type="button" onclick="enviarUrl()">Adicionar</button>
+          <button type="button" onclick="mostrarDados()">📂 Ver Dados</button>
           <button type="button" onclick="fecharDados()">❌ Fechar</button>
         </div>
       </form>
     </section>
 
-    <section class="dados-section" id="conteudo"></section>
+    <section class="dados-section">
+      <h2>Sites Visitados:</h2>
+      <div id="conteudo"></div> 
+    </section>
 
     <section class="links-section">
-      <h2>Links Coletados</h2>
+
+      <select id="seletorDeSites" class="seletorDeSites" onchange="mostrarLinksPorSite()">
+        <option value="">Ecolha um site</option>
+      </select>
       <ul id="linksColetados"></ul>
+
     </section>
+
   </main>
 
   <footer>
@@ -38,4 +48,5 @@
 
   <script src="script.js"></script>
 </body>
+
 </html>
