--- a/public/index.html
+++ b/public/index.html
@@ -38,6 +38,11 @@
       </select>
       <ul id="linksColetados"></ul>
 
+      <select id="seletorDeImagens" class="seletorDeImagens" onchange="mostrarImagensPorSite()">
+        <option value="">Ecolha um site</option>
+      </select>
+      <ul id="ImagensColetadas"></ul>
+
     </section>
 
   </main>
