--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
         <input type="url" id="novaUrl" placeholder="Digite a URL..." required />
         <div class="buttons">
           <button type="button" onclick="enviarUrl()">Adicionar</button>
+          <button onclick="excluirSite()">Excluir site selecionado</button>
           <button type="button" onclick="mostrarDados()">📂 Ver Dados</button>
           <button type="button" onclick="fecharDados()">❌ Fechar</button>
         </div>
@@ -32,17 +33,20 @@
     </section>
 
     <section class="links-section">
-
+      <p>Seletor de Links</p>
       <select id="seletorDeSites" class="seletorDeSites" onchange="mostrarLinksPorSite()">
         <option value="">Ecolha um site</option>
       </select>
       <ul id="linksColetados"></ul>
 
+    </section>
+
+    <section class="imgs-section">
+      <p>Seletor de Imagens</p>
       <select id="seletorDeImagens" class="seletorDeImagens" onchange="mostrarImagensPorSite()">
         <option value="">Ecolha um site</option>
       </select>
       <ul id="ImagensColetadas"></ul>
-
     </section>
 
   </main>
